--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ build = "build.rs"
 [dependencies]
 lalrpop-util = "0.16.1"
 regex = "0.2.0"
+rental = "0.5.2"
 
 [build-dependencies]
 lalrpop = "0.16.1"
